--- a/itisWeb5/WebContent/index.html
+++ b/itisWeb5/WebContent/index.html
@@ -4,7 +4,7 @@
 <head>	
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title> ex2_step5 </title>
+	<title> ITIS Home </title>
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" />
 	<script type="text/javascript" src="js/prefixfree.min.js"></script>
@@ -15,7 +15,7 @@
 		<h1>logo</h1>
 		<ul id="gnb">
 			<li><a href="#"><i class="fa fa-header"></i>Hotel</a></li>
-			<li><a href="#"><i class="fa fa-building-o"></i>Fucility</a></li>
+			<li><a href="#"><i class="fa fa-building-o"></i>Facility</a></li>
 			<li><a href="#"><i class="fa fa-suitcase"></i>Business</a></li>
 			<li><a href="#"><i class="fa fa-cutlery"></i>Restaurant</a></li>	
 		</ul>		
